# gramine-sgx-revm

./: Cargo.toml  Dockerfile  Makefile  README.md  sample.report  sample.reportsig  sample.sgx-revm.sig  sgx-revm.manifest.template
data/: input
sample/: sample.quote  sample.report  sample.reportsig  sample.sgx-revm.sig
src/: main.rs
